feat(widget, errors): added endpoint for widget creation and updated error handler
